--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Document</title>
+        <title>Task To Do List</title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <!--Icons-->
@@ -13,6 +13,7 @@
     </head>
     <body onload="localinitialcarddata()">
       <!--Trigger-->
+      <!--Modal-->
       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -44,7 +45,9 @@
             </div>
           </div>
         </div>
+
       </div>
+      <!--navbar-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand fw-bold text-primary"  href="#">Tasky</a>
@@ -63,6 +66,7 @@
               </div>
             </div>
           </nav>
+        <!--Search Tab-->
           <div class="container">
             <div class="row justify-content-center mt-5">
                 <div class="col-md-6">
@@ -71,7 +75,7 @@
                         <span class="input-group-text" id="basic-addon2"><i class="fa-solid fa-magnifying-glass"></i></span>
                       </div>
                 </div>
-            </div>
+          </div>
             <section>
                 <div class="row task__container">
                     
